--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, Yuchdroid16Activity!</string>
-    <string name="app_name">Yuchdroid16</string>
+    <string name="app_name">YuchDroid</string>
+    <string name="start_svr_but">Start Service</string>
+    <string name="stop_svr_but">Stop Service</string>
 </resources>
