--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">语盒</string>
     <string name="start_svr_but">启动服务</string>
     <string name="stop_svr_but">停止服务</string>
+    <string name="no_mail">没有内容，请等待推送</string>
 </resources>
