--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">YuchDroid</string>
     <string name="start_svr_but">Start Service</string>
     <string name="stop_svr_but">Stop Service</string>
+    <string name="no_mail">no mail, please wait refresh...</string>
 </resources>
