--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -3,5 +3,9 @@
     <string name="app_name">语盒</string>
     <string name="start_svr_but">启动服务</string>
     <string name="stop_svr_but">停止服务</string>
+    <string name="login_host">服务主机:</string>
+    <string name="login_port">主机端口:</string>
+    <string name="login_user_pass">用户密码:</string>
     <string name="no_mail">没有内容，请等待推送</string>
+    <string name="mail_me_address">我</string>
 </resources>
