--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -3,5 +3,9 @@
     <string name="app_name">YuchDroid</string>
     <string name="start_svr_but">Start Service</string>
     <string name="stop_svr_but">Stop Service</string>
+    <string name="login_host">Host:</string>
+    <string name="login_port">Port:</string>
+    <string name="login_user_pass">UserPass:</string>
     <string name="no_mail">no mail, please wait refresh...</string>
+    <string name="mail_me_address">Me</string>
 </resources>
