--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -3,9 +3,23 @@
     <string name="app_name">YuchDroid</string>
     <string name="start_svr_but">Start Service</string>
     <string name="stop_svr_but">Stop Service</string>
+    
+    <!-- login activity -->
     <string name="login_host">Host:</string>
+    <string name="login_host_error_prompt">Please input right Host (Domain or IP address)</string>
     <string name="login_port">Port:</string>
+    <string name="login_port_error_prompt">Please input right Port (1-65535)</string>
     <string name="login_user_pass">UserPass:</string>
+    <string name="login_user_pass_error_prompt">Please input UserPass</string>
+    
+    <!-- mail activity -->
     <string name="no_mail">no mail, please wait refresh...</string>
     <string name="mail_me_address">Me</string>
+    <string name="mail_over_max_length_prompt">--YuchDroid Prompt\nMail content is over the max length</string>
+    <string name="mail_notification_ticker">New Mail Coming!</string>
+    
+    <!-- dialog relation -->
+    <string name="dlg_info_title">YuchDroid Prompt:</string>
+    <string name="dlg_info_confirm">I know it</string>
+    
 </resources>
