--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="login_port_error_prompt">Please input right Port (1-65535)</string>
     <string name="login_user_pass">UserPass:</string>
     <string name="login_user_pass_error_prompt">Please input UserPass</string>
+    <string name="login_state_disconnect">Disconnect.</string>
+    <string name="login_state_connecting">Connecting...</string>
+    <string name="login_state_connected">Connected.</string>
     
     <!-- mail activity -->
     <string name="no_mail">no mail, please wait refresh...</string>
