--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">语盒</string>
+    <string name="title_debug_info">诊断信息</string>
+    <string name="title_mail">邮件</string>
     <string name="start_svr_but">启动服务</string>
     <string name="stop_svr_but">停止服务</string>
+    
+    <string name="debug_info_no_info">呀！没有调试信息</string>
+    <string name="debug_info_menu_clear">清除</string>
+    <string name="debug_info_menu_copy">拷贝到剪切版</string>
+    <string name="debug_info_menu_copy_ok">成功拷贝到剪切版</string>
+    <string name="debug_info_menu_help">帮助</string>
     
     <!-- login activity -->
     <string name="login_host">服务主机:</string>
