--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -23,7 +23,10 @@
     <string name="login_state_connecting">连接中...</string>
     <string name="login_state_connected">连接成功</string>
     
-    <!-- mail activity -->
+    <!-- home activity -->
+    <string name="login_menu_home">内容主界面</string>
+    
+    <!-- mail list view -->
     <string name="no_mail">没有内容，请等待推送</string>
     <string name="mail_me_address">我</string>
     <string name="mail_over_max_length_prompt">--语盒提示\n邮件的长度超过最大设置长度。</string>
@@ -32,4 +35,6 @@
     <!-- dialog relation -->
     <string name="dlg_info_title">语盒提示：</string>
     <string name="dlg_info_confirm">我知道了</string>
+    <string name="dlg_info_copy">拷贝到剪切板</string>
+    
 </resources>
