--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -34,8 +34,7 @@
     <string name="dlg_info_title">YuchDroid Prompt:</string>
     <string name="dlg_info_confirm">I know it</string>
     <string name="dlg_info_copy">Copy To Clipboard</string>
-    
-    
+        
     <!-- mail list view -->
     <string name="no_mail">no mail, please wait refresh...</string>
     <string name="mail_me_address">Me</string>
@@ -68,6 +67,8 @@
     <string name="mail_compose_ref_lable">Reference Mail (touch to discard reference):</string>
     <string name="mail_compose_reply_prefix">Re: </string>
     <string name="mail_compose_forward_prefix">Forward: </string>
+    <string name="mail_compose_delete_ref_mail">Are you sure delete this reference mail?</string>
+    <string name="mail_compose_discard_mail">Are you sure discard this mail?</string>
     
     
     
