--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">YuchDroid</string>
     <string name="title_debug_info">Debug Information</string>
-    <string name="title_mail">Mail</string>
+    <string name="title_mail">YuchDroid Mail</string>
     
     <string name="debug_info_no_info">Opps! No debug information.</string>
     <string name="debug_info_menu_clear">Clear</string>
@@ -10,10 +10,9 @@
     <string name="debug_info_menu_copy_ok">Copy To Clipboard OK!</string>
     <string name="debug_info_menu_help">Help</string>
         
+    <!-- login activity -->
     <string name="start_svr_but">Start Service</string>
     <string name="stop_svr_but">Stop Service</string>
-    
-    <!-- login activity -->
     <string name="login_host">Host:</string>
     <string name="login_host_hint">Domain or IP address</string>
     <string name="login_host_error_prompt">Please input right Host (Domain or IP address)</string>
@@ -69,6 +68,10 @@
     <string name="mail_compose_forward_prefix">Forward: </string>
     <string name="mail_compose_delete_ref_mail">Are you sure delete this reference mail?</string>
     <string name="mail_compose_discard_mail">Are you sure discard this mail?</string>
+    <string name="mail_compose_send_without_modified">Do you want send without changed?</string>
+    <string name="mail_compose_address_error">Send address' format is error!</string>
+    <string name="mail_compose_empty_body_question">Are you sure send mail without body?</string>
+    
     
     
     
