--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -12,6 +12,11 @@
     <string name="debug_info_menu_help">帮助</string>
     
     <!-- login activity -->
+    <string name="login_connect_deamon_state">连接服务开启！</string>
+    <string name="login_connect_deamon_state_connect">连接正常</string>
+    <string name="login_connect_deamon_state_connecting">连接断开，正在连接...</string>
+    <string name="login_connect_deamon_state_disconnect">用户断开连接</string>
+    
     <string name="start_svr_but">启动服务</string>
     <string name="stop_svr_but">停止服务</string>
     <string name="login_host">服务主机:</string>
@@ -86,8 +91,11 @@
     <string name="mail_open_scroll_top">触摸返回顶部</string>
     <string name="mail_open_resend_btn">重新发送</string>
     <string name="mail_open_resend_need_connectDeamon_prompt">没有开启连接，无法发送邮件。</string>
+    <string name="mail_open_delete_prompt">你确定要删除这个邮件组？</string>
+    
     
     <!-- mail compose view -->
+    <string name="mail_compose_title">语盒邮件撰写</string>
     <string name="mail_compose_to">收件人</string>
     <string name="mail_compose_cc">抄送</string>
     <string name="mail_compose_bcc">密送</string>
@@ -106,5 +114,8 @@
     <string name="mail_compose_empty_body_question">你确认要发送没有正文的邮件么？</string>
     <string name="mail_compose_connectdeamon_not_run">没有开启连接服务，无法发送邮件！</string>
     <string name="mail_compose_own_account_prompt">请选择想要从哪个信箱发出</string>
+    <string name="mail_compose_add_cc_bcc">添加抄送/密送地址</string>
+    <string name="mail_compose_attachment">附件</string>
+    
     
 </resources>
