--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="debug_info_menu_help">Help</string>
         
     <!-- login activity -->
+    <string name="login_connect_deamon_state">Connection Service Started!</string>
+    <string name="login_connect_deamon_state_connect">Connection OK!</string>
+    <string name="login_connect_deamon_state_connecting">Connecting...</string>
+    <string name="login_connect_deamon_state_disconnect">User Disconnect.</string>
     <string name="start_svr_but">Start Service</string>
     <string name="stop_svr_but">Stop Service</string>
     <string name="login_host">Host:</string>
@@ -85,9 +89,10 @@
     <string name="mail_open_scroll_top">Touch To Scroll Top</string>
     <string name="mail_open_resend_btn">Resend</string>
     <string name="mail_open_resend_need_connectDeamon_prompt">Can\'t resend until start connect with server.</string>
-    
+    <string name="mail_open_delete_prompt">Are you sure delete this mail group?</string>
     
     <!-- mail compose view -->
+    <string name="mail_compose_title">YuchDroid Mail Compose</string>
     <string name="mail_compose_to">To</string>
     <string name="mail_compose_cc">Cc</string>
     <string name="mail_compose_bcc">Bcc</string>
@@ -106,5 +111,9 @@
     <string name="mail_compose_empty_body_question">Are you sure send mail without body?</string>
     <string name="mail_compose_connectdeamon_not_run">The Connect Service is not run, can\'t send mail!</string>
     <string name="mail_compose_own_account_prompt">Select send from:</string>
+    <string name="mail_compose_add_cc_bcc">Add Cc/Bcc</string>
+    <string name="mail_compose_attachment">Attachment</string>
+    
+    
     
 </resources>
